fix styling on IE11 copied tooltips stay open for 2s

--- a/css/style.css
+++ b/css/style.css
@@ -296,12 +296,15 @@ ol {
 	font-size:24px;
 	font-weight: bold;
 	margin-bottom: 20px;
+	width: 100%;
+	text-align: center;
 }
 
 .home_description {
 	font-size: 20px;
 	margin-bottom: 20px;
 	line-height: 25px;
+	width: 100%;
 	text-align: center;
 }
 
